--- a/htmlcss_advance_homework3/index.html
+++ b/htmlcss_advance_homework3/index.html
@@ -97,46 +97,33 @@
                     <div class="content_field">
                         <div class="content_title">카테고리</div>
                         <div class="content">
-                            <div class="selectbox">
-                                <span class="selected_value">대분류</span>
-                                <ul class="select_options">
-                                    <li>
-                                        <div class="select_option">대분류1</div>
-                                    </li>
-                                    <li>
-                                        <div class="select_option">대분류2</div>
-                                    </li>
-                                    <li>
-                                        <div class="select_option">대분류3</div>
-                                    </li>
-                                </ul>
-                                <!-- <div class=""></div> -->
-                                <!-- <select name="" id="category_big" class="selectbox">
+                            <div class="category_element">
+                                <select name="" id="category_big" class="selectbox">
                                     <option value="">대분류</option>
                                     <option value="">대분류_Temp_1</option>
                                     <option value="">대분류_Temp_2</option>
-                                </select> -->
+                                </select>
                             </div>
-                            <div class="selectbox">
-                                <!-- <select name="" id="category_mid" class="selectbox">
+                            <div class="category_element">
+                                <select name="" id="category_mid" class="selectbox">
                                     <option value="">중분류</option>
                                     <option value="">중분류_Temp_1</option>
                                     <option value="">중분류_Temp_2</option>
-                                </select> -->
+                                </select>
                             </div>
-                            <div class="selectbox">
-                                <!-- <select name="" id="category_small" class="selectbox">
+                            <div class="category_element">
+                                <select name="" id="category_small" class="selectbox">
                                     <option value="">소분류</option>
                                     <option value="">소분류_Temp_1</option>
                                     <option value="">소분류_Temp_2</option>
-                                </select> -->
+                                </select>
                             </div>
-                            <div class="selectbox">
-                                <!-- <select name="" id="category_xsmall" class="selectbox">
+                            <div class="category_element">
+                                <select name="" id="category_xsmall" class="selectbox">
                                     <option value="">세분류</option>
                                     <option value="">세분류_Temp_1</option>
                                     <option value="">세분류_Temp_2</option>
-                                </select> -->
+                                </select>
                             </div>
                         </div>
                     </div>
