--- a/htmlcss_advance_homework4/index.html
+++ b/htmlcss_advance_homework4/index.html
@@ -21,7 +21,15 @@
                 <a href="#" class="place_blog_review_link">
                     블로그 리뷰 6
                 </a>
-                <div></div>
+                <div class="place_btns">
+                    <a href="#" class="btn start">
+                        <span class="blind">길찾기</span>
+                        출발
+                    </a><a href="#" class="btn end">
+                        <span class="blind">길찾기</span>
+                        도착
+                    </a>
+                </div>
             </div>
         </div>
         <div class="content"></div>
