--- a/promotion/promotion.html
+++ b/promotion/promotion.html
@@ -16,7 +16,7 @@
             </a>
         </header>
         <main class="content">
-            <!-- <section class="section invite">
+            <section class="section invite">
                 <div class="bg_pivot">
                     <div class="bg">
                         <h2 class="blind">푸드위드 소개</h2>
@@ -41,7 +41,7 @@
                         </p>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <section class="section store">
                 <div class="bg_pivot">
                     <div class="bg">
