--- a/promotion/promotion.html
+++ b/promotion/promotion.html
@@ -16,7 +16,7 @@
             </a>
         </header>
         <main class="content">
-            <section class="section invite">
+            <!-- <section class="section invite">
                 <div class="bg_pivot">
                     <div class="bg">
                         <h2 class="blind">푸드위드 소개</h2>
@@ -26,7 +26,7 @@
                         </p>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="section creator">
                 <div class="bg_pivot">
                     <div class="bg">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section store">
+            <!-- <section class="section store">
                 <div class="bg_pivot">
                     <div class="bg">
                         <h2 class="blind">푸드위드 스토어 소개</h2>
@@ -57,6 +57,11 @@
                                     <a href="#" class="link">
                                         <img src="image/thumbnail_apple.jpg" alt="꿀사과" class="img" width="230"
                                             height="230">
+                                        <div class="info_sale">
+                                            <strong class="percent">50%<span class="blind">할인</span>
+                                            </strong>
+                                            <span class="time">10:00 ~ 12:00</span>
+                                        </div>
                                     </a>
                                     <div class="info">
                                         <div class="name">꿀사과</div>
@@ -67,6 +72,11 @@
                                     <a href="#" class="link">
                                         <img src="image/thumbnail_onion.jpg" alt="친환경 양파 구매" class="img" width="230"
                                             height="230">
+                                        <div class="info_sale">
+                                            <strong class="percent">50%<span class="blind">할인</span>
+                                            </strong>
+                                            <span class="time">10:00 ~ 12:00</span>
+                                        </div>
                                     </a>
                                     <div class="info">
                                         <div class="name">친환경 양파</div>
@@ -75,8 +85,13 @@
                                 </li>
                                 <li class="element">
                                     <a href="#" class="link">
-                                        <img src="image/thumbnail_banana.jpg" alt="제주 직송 유기농 바나나 구매" class="img" width="230"
-                                            height="230">
+                                        <img src="image/thumbnail_banana.jpg" alt="제주 직송 유기농 바나나 구매" class="img"
+                                            width="230" height="230">
+                                        <div class="info_sale">
+                                            <strong class="percent">50%<span class="blind">할인</span>
+                                            </strong>
+                                            <span class="time">10:00 ~ 12:00</span>
+                                        </div>
                                     </a>
                                     <div class="info">
                                         <div class="name">제주 직송 유기농 바나나</div>
@@ -87,6 +102,11 @@
                                     <a href="#" class="link">
                                         <img src="image/thumbnail_kiwi.jpg" alt="국내산 키위 구매" class="img" width="230"
                                             height="230">
+                                        <div class="info_sale">
+                                            <strong class="percent">50%<span class="blind">할인</span>
+                                            </strong>
+                                            <span class="time">10:00 ~ 12:00</span>
+                                        </div>
                                     </a>
                                     <div class="info">
                                         <div class="name">국내산 키위</div>
@@ -95,8 +115,13 @@
                                 </li>
                                 <li class="element">
                                     <a href="#" class="link">
-                                        <img src="image/thumbnail_broccoli.jpg" alt="유기농 브로콜리 구매" class="img" width="230"
-                                            height="230">
+                                        <img src="image/thumbnail_broccoli.jpg" alt="유기농 브로콜리 구매" class="img"
+                                            width="230" height="230">
+                                        <div class="info_sale">
+                                            <strong class="percent">50%<span class="blind">할인</span>
+                                            </strong>
+                                            <span class="time">10:00 ~ 12:00</span>
+                                        </div>
                                     </a>
                                     <div class="info">
                                         <div class="name">유기농 브로콜리</div>
@@ -107,6 +132,11 @@
                                     <a href="#" class="link">
                                         <img src="image/thumbnail_lemon.jpg" alt="본사 직영 레몬 구매" class="img" width="230"
                                             height="230">
+                                        <div class="info_sale">
+                                            <strong class="percent">50%<span class="blind">할인</span>
+                                            </strong>
+                                            <span class="time">10:00 ~ 12:00</span>
+                                        </div>
                                     </a>
                                     <div class="info">
                                         <div class="name">본사 직영 레몬</div>
@@ -117,6 +147,11 @@
                                     <a href="#" class="link">
                                         <img src="image/thumbnail_garlic.jpg" alt="국내산 마늘 구매" class="img" width="230"
                                             height="230">
+                                        <div class="info_sale">
+                                            <strong class="percent">50%<span class="blind">할인</span>
+                                            </strong>
+                                            <span class="time">10:00 ~ 12:00</span>
+                                        </div>
                                     </a>
                                     <div class="info">
                                         <div class="name">국내산 마늘</div>
@@ -127,6 +162,11 @@
                                     <a href="#" class="link">
                                         <img src="image/thumbnail_tomato.jpg" alt="정품 완숙 토마토 구매" class="img" width="230"
                                             height="230">
+                                        <div class="info_sale">
+                                            <strong class="percent">50%<span class="blind">할인</span>
+                                            </strong>
+                                            <span class="time">10:00 ~ 12:00</span>
+                                        </div>
                                     </a>
                                     <div class="info">
                                         <div class="name">정품 완숙 토마토</div>
@@ -139,9 +179,17 @@
                     </div>
 
                 </div>
-            </section>
+            </section> -->
             <section class="section recipe">
-                <h2 class="blind">푸드위드 레시피 소개</h2>
+                <div class="bg_pivot">
+                    <div class="bg">
+                        <h2 class="blind">푸드위드 레시피 소개</h2>
+                        <p class="blind">
+                            엄선된 유명 셰프들의 레시피를 보고 여러분의 최고의 음식을 만들어보세요
+                            당신도 셰프가 될 수 있어요
+                        </p>
+                    </div>
+                </div>
             </section>
         </main>
         <footer class="footer">
