--- a/exam/src/index.html
+++ b/exam/src/index.html
@@ -104,7 +104,7 @@
                             <!-- TODO : 대체 택스트 변화 -->
                             <span class="blind">열기</span>
                         </button>
-                    </div>  
+                    </div>
                     <!-- TODO : open -->
                     <ol class="ranking_list">
                         <li class="element_rank first">
@@ -126,76 +126,76 @@
                             </span>
                         </li>
                         <li class="element_rank second">
-                                <span class="rank">
-                                        <span class="blind">위</span>
-                                    </span>
-                                    <div class="subject_wrap">
-                                        <a href="#" class="subject">
-                                            일이삼사오육칠팔구십일이삼
-                                        </a>
-                                    </div>
-                                    <!-- TODO : js -->
-                                    <span class="offset_wrap up">
-                                        <span class="offset_flag"></span>
-                                        <p class="offset_value">20
-                                            <span class="blind">위 상승</span>
-                                        </p>
-                                        <!-- TODO : 대체텍스트 수정 -->
-                                    </span>
+                            <span class="rank">
+                                <span class="blind">위</span>
+                            </span>
+                            <div class="subject_wrap">
+                                <a href="#" class="subject">
+                                    일이삼사오육칠팔구십일이삼
+                                </a>
+                            </div>
+                            <!-- TODO : js -->
+                            <span class="offset_wrap up">
+                                <span class="offset_flag"></span>
+                                <p class="offset_value">20
+                                    <span class="blind">위 상승</span>
+                                </p>
+                                <!-- TODO : 대체텍스트 수정 -->
+                            </span>
                         </li>
                         <li class="element_rank third">
-                                <span class="rank">
-                                        <span class="blind">위</span>
-                                    </span>
-                                    <div class="subject_wrap">
-                                        <a href="#" class="subject">
-                                            일이삼사오육칠팔구십일이삼
-                                        </a>
-                                    </div>
-                                    <!-- TODO : js -->
-                                    <span class="offset_wrap up">
-                                        <span class="offset_flag"></span>
-                                        <p class="offset_value">20
-                                            <span class="blind">위 상승</span>
-                                        </p>
-                                        <!-- TODO : 대체텍스트 수정 -->
-                                    </span>
+                            <span class="rank">
+                                <span class="blind">위</span>
+                            </span>
+                            <div class="subject_wrap">
+                                <a href="#" class="subject">
+                                    일이삼사오육칠팔구십일이삼
+                                </a>
+                            </div>
+                            <!-- TODO : js -->
+                            <span class="offset_wrap up">
+                                <span class="offset_flag"></span>
+                                <p class="offset_value">20
+                                    <span class="blind">위 상승</span>
+                                </p>
+                                <!-- TODO : 대체텍스트 수정 -->
+                            </span>
                         </li>
                         <li class="element_rank fourth">
-                                <span class="rank">
-                                        <span class="blind">위</span>
-                                    </span>
-                                    <div class="subject_wrap">
-                                        <a href="#" class="subject">
-                                            일이삼사오육칠팔구십일이삼
-                                        </a>
-                                    </div>
-                                    <!-- TODO : js -->
-                                    <span class="offset_wrap up">
-                                        <span class="offset_flag"></span>
-                                        <p class="offset_value">20
-                                            <span class="blind">위 상승</span>
-                                        </p>
-                                        <!-- TODO : 대체텍스트 수정 -->
-                                    </span>
+                            <span class="rank">
+                                <span class="blind">위</span>
+                            </span>
+                            <div class="subject_wrap">
+                                <a href="#" class="subject">
+                                    일이삼사오육칠팔구십일이삼
+                                </a>
+                            </div>
+                            <!-- TODO : js -->
+                            <span class="offset_wrap up">
+                                <span class="offset_flag"></span>
+                                <p class="offset_value">20
+                                    <span class="blind">위 상승</span>
+                                </p>
+                                <!-- TODO : 대체텍스트 수정 -->
+                            </span>
                         </li>
                         <li class="element_rank fifth">
-                                <span class="rank">
-                                        <span class="blind">위</span>
-                                    </span>
-                                    <div class="subject_wrap">
-                                        <a href="#" class="subject">
-                                            일이삼사오육칠팔구십일이삼
-                                        </a>
-                                    </div>
-                                    <!-- TODO : js -->
-                                    <span class="offset_wrap up">
-                                        <span class="offset_flag"></span>
-                                        <p class="offset_value">20
-                                            <span class="blind">위 상승</span>
-                                        </p>
-                                        <!-- TODO : 대체텍스트 수정 -->
-                                    </span>
+                            <span class="rank">
+                                <span class="blind">위</span>
+                            </span>
+                            <div class="subject_wrap">
+                                <a href="#" class="subject">
+                                    일이삼사오육칠팔구십일이삼
+                                </a>
+                            </div>
+                            <!-- TODO : js -->
+                            <span class="offset_wrap up">
+                                <span class="offset_flag"></span>
+                                <p class="offset_value">20
+                                    <span class="blind">위 상승</span>
+                                </p>
+                                <!-- TODO : 대체텍스트 수정 -->
+                            </span>
                         </li>
                     </ol>
                 </div>
@@ -260,9 +260,9 @@
                                     </a>
                                     <!-- 버튼 클릭 -->
                                     <!-- complete 시 투표완료로 바꾸기-->
-                                            <button type="button" class="btn complete">
-                                                    투표하기
-                                                </button>
+                                    <button type="button" class="btn complete">
+                                        투표하기
+                                    </button>
                                 </div>
                             </li>
                             <li class="survey_element">
@@ -360,7 +360,7 @@
                         <span class="blind">공지</span>
                     </h2>
                     <a href="#" class="text">
-                        베스트리그 11차 승격장이 선정되었습니다선정되었습니다선정되었습니다선정되었습니다선정되었습니다선정되었습니다.
+                        베스트리그 11차 승격장이 선정되었습니다선정되었습니다.
                     </a>
                     <a href="#" class="top_btn">
                         <span class="btn_text">
@@ -370,6 +370,71 @@
                     </a>
                 </div>
             </div>
+        </div>
+        <div class="customer_info_popup">
+            <div class="popup_layer">
+                <strong class="title">고객정보</strong>
+                <p class="desc">이벤트 참가를 위해 고객정보를 취합하고있습니다.<br>
+                    관련 정보를 정확하게 입력바랍니다.</p>
+                <form action="" method="POST">
+                    <div class="form_inner">
+                        <ul class="info_list">
+                            <li class="element">
+                                <label for="info_name" class="input_title">성명</label>
+                                <div class="input_form">
+                                    <input type="text" id="info_name" class="input_value" required>
+                                </div>
+                            </li>
+                            <li class="element">
+                                <label for="info_email" class="input_title">이메일주소</label>
+                                <div class="input_form">
+                                    <input type="email" id="info_email" class="input_value" required>
+                                </div>
+                            </li>
+                            <li class="element">
+                                <label for="info_phone" class="input_title">전화번호</label>
+                                <div class="input_form">
+                                    <input type="tel" id="info_phone" class="input_value" required>
+                                </div>
+                            </li>
+                            <li class="element">
+                                <label for="info_address" class="input_title">주소</label>
+                                <div class="input_form">
+                                    <input type="text" id="info_address" class="input_value" required>
+                                </div>
+                            </li>
+                        </ul>
+                        <div class="check_list">
+                            <button type="button" class="check_area">
+                                <!-- TODO : 체크 되고말고 check/uncheck -->
+                                <span class="check_icon check">
+                                    <!-- TODO : 대체텍스트 동의/미동의-->
+                                    <span class="blind">동의</span>
+                                </span>
+                                <p class="check_desc">네이버 웹툰에 고객정보를 제공함을 <strong class="agree">동의함</strong></p>
+                            </button>
+                            <button type="button" class="check_area">
+                                <!-- TODO : 체크 되고말고 check/uncheck -->
+                                <span class="check_icon check">
+                                    <!-- TODO : 대체텍스트 동의/미동의-->
+                                    <span class="blind">동의</span>
+                                </span>
+                                <p class="check_desc">수집된 정보는 고객 문의 응대를 위해 3개월관 보관 후 파기되는 것에 동의합니다.</p>
+                            </button>
+                        </div>
+                        <div class="btn_wrap">
+                            <button type="submit" class="submit_btn">
+                                입력
+                            </button>
+                        </div>
+                    </div>
+                </form>
+                <button type="button" class="close_btn">
+                    <span class="blind">창닫기</span>
+                </button>
+            </div>
+            <!-- TODO : 창닫기 -->
+            <div class="popup_dimmed" role="close_area"></div>
         </div>
         <footer class="footer">
             <strong>© NAVER WEBTOON CORP.</strong>
