--- a/exam/src/index.html
+++ b/exam/src/index.html
@@ -37,8 +37,7 @@
                 </div>
             </div>
             <ul class="header_menu">
-                <!-- TODO : select -->
-                <li class="menu home select">
+                <li class="menu home">
                     <a href="#" class="link">
                         <span class="menu_title">홈<span class="blind">바로가기</span></span>
                     </a>
@@ -63,6 +62,7 @@
         <div class="container">
             <div class="banner_wrap">
                 <h2 class="blind">이벤트 광고 배너</h2>
+                <!--  -->
                 <div role="button" class="banner" tabindex="0">
                     <img src="../img/banner.jpg" alt="" class="img">
                     <p class="blind">
@@ -440,6 +440,10 @@
             <strong>© NAVER WEBTOON CORP.</strong>
         </footer>
     </div>
+
+    <!-- <script type="text/javascript" src="js/main.js"></script> -->
+    <script src="jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
